Bug 158510 - FILEOPEN PPT/PPTX If audio file has absolute path in relationships and is not found, it should be searched from the location where the file is opened
Summary: FILEOPEN PPT/PPTX If audio file has absolute path in relationships and is not...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Vladislav Tarakanov
URL:
Whiteboard: target:25.2.0
Keywords:
Depends on:
Blocks: Media PPTX
  Show dependency treegraph
 
Reported: 2023-12-04 08:35 UTC by Amin Irgaliev
Modified: 2024-08-21 18:03 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
No sound in pptx file opened in LO Impress (6.54 MB, application/zip)
2023-12-04 08:37 UTC, Amin Irgaliev
Details
Before-After-Comparison (250.71 KB, image/png)
2023-12-04 16:49 UTC, ToanTran
Details
Trying to reproduce on 24.2.0.0.alpha1+ (5.45 MB, video/mp4)
2023-12-04 18:31 UTC, Vladislav Tarakanov
Details
Confirm Popup (336.93 KB, image/png)
2023-12-05 10:00 UTC, ToanTran
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Amin Irgaliev 2023-12-04 08:35:42 UTC
Description:
ppt/pptx files do not play audio through LO Impress. Perhaps the fact is that absolute paths are written in ppt/slides/_rels. It seems that MSO, if the file is not found in the specified path, tries to call it from the folder in which the presentation is located

Steps to Reproduce:
1. Open the ppt/pptx file through LO Impress.
2. Run demo
3. Make sure that the sound that was in the presentation is not played

Actual Results:
There is no sound in the presentation

Expected Results:
Audio in presentation plays


Reproducible: Always


User Profile Reset: No

Additional Info:
Comment 1 Amin Irgaliev 2023-12-04 08:37:11 UTC
Created attachment 191215 [details]
No sound in pptx file opened in LO Impress
Comment 2 ToanTran 2023-12-04 16:48:36 UTC Comment hidden (off-topic)
Comment 3 ToanTran 2023-12-04 16:49:34 UTC Comment hidden (off-topic)
Comment 4 ToanTran 2023-12-04 16:51:41 UTC Comment hidden (off-topic)
Comment 5 Vladislav Tarakanov 2023-12-04 17:36:01 UTC Comment hidden (off-topic)
Comment 6 ToanTran 2023-12-04 18:02:49 UTC Comment hidden (off-topic)
Comment 7 ToanTran 2023-12-04 18:07:54 UTC Comment hidden (off-topic)
Comment 8 Vladislav Tarakanov 2023-12-04 18:31:18 UTC Comment hidden (off-topic)
Comment 9 Vladislav Tarakanov 2023-12-04 18:32:00 UTC Comment hidden (off-topic)
Comment 10 Vladislav Tarakanov 2023-12-04 18:52:49 UTC Comment hidden (off-topic)
Comment 11 ToanTran 2023-12-05 10:00:04 UTC Comment hidden (off-topic)
Comment 12 ToanTran 2023-12-05 10:00:27 UTC Comment hidden (off-topic)
Comment 13 Vladislav Tarakanov 2023-12-05 10:22:46 UTC Comment hidden (off-topic)
Comment 14 Buovjaga 2023-12-07 07:05:49 UTC
Toan can report a new bug.

I think this needs opinions from developers before we can confirm.
Comment 15 Gabor Kelemen (Collabora) 2023-12-07 17:08:41 UTC
(In reply to Buovjaga from comment #14)
> Toan can report a new bug.
> 
> I think this needs opinions from developers before we can confirm.

I can confirm that:
- PP 2010 can play the sound when the slideshow is started
- Impress recent master can not play the sound even in edit mode, when I press play on the Media sidebar. This is under Linux, to make sure this is not a duplicate of that Windows media integration bug.
- If I insert the example mp3 in the same file with Insert - Sound or video and press play on the Media sidebar, the sound can be heard; also works after starting the presentation.

Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 0f82e9d42822e627edd1fb3b3c87e1f8a22136a4
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

slide1.xml contains this:
                <p:nvPicPr>
                    <p:cNvPr id="4" name="LibreOffice-7.6-New-Features.mp3">
                        <a:hlinkClick r:id="" action="ppaction://media"/>
                    </p:cNvPr>
                    <p:cNvPicPr>
                        <a:picLocks noRot="1" noChangeAspect="1"/>
                    </p:cNvPicPr>
                    <p:nvPr>
                        <a:audioFile r:link="rId1"/>
                    </p:nvPr>
                </p:nvPicPr>

while the _rels/slide1.xml.rels has this:
    <Relationship Id="rId1" Type="http://schemas.openxmlformats.org/officeDocument/2006/relationships/audio" Target="file:///D:\LibreOffice-7.6-New-Features.mp3" TargetMode="External"/>
Comment 16 Vladislav Tarakanov 2024-02-27 09:29:33 UTC
Sent a patch to fix the problem for the slideshow: https://gerrit.libreoffice.org/c/core/+/164023
Comment 17 stragu 2024-03-13 03:08:45 UTC
(In reply to Vladislav Tarakanov from comment #16)
> Sent a patch to fix the problem for the slideshow:
> https://gerrit.libreoffice.org/c/core/+/164023
Patch solves the issue for me on Ubuntu 22.04 with gstreamer 1.20.3
Comment 18 Commit Notification 2024-07-12 12:03:45 UTC
Vladislav Tarakanov committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fe897b36aef28dfe175461c43614e22588fcfd84

tdf#158510 Launch media from a presentation dir path

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2024-07-26 11:05:10 UTC
Vladislav Tarakanov committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/d875b5acdd50588d0d570890bd7eef6abb208199

tdf#158510 Launch media from a presentation dir path

It will be available in 24.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Commit Notification 2024-07-28 15:06:35 UTC
Vladislav Tarakanov committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c658efe24f7a7eb4234c1c64668ea115788272e7

tdf#158510 Don't change the initial URL when using fallback

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 Commit Notification 2024-08-13 22:19:28 UTC
Vladislav Tarakanov committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/134fb4747a80726e808909e6a2d2c9aa950bd6d1

tdf#158510 Added fallback for media files in MediaWindowImpl

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 22 Commit Notification 2024-08-20 14:38:29 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/4bee213c000e9775101d7bb95fd36d98e8d982e6

Revert "tdf#158510 Launch media from a presentation dir path" (24.8 only)

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.