slideshow/source/inc/slideshowcontext.hxx
@@ -108,6 +108,7 @@ namespace slideshow::internal
             const UnoViewContainer&                         mrViewContainer;
             css::uno::Reference< css::uno::XComponentContext>   mxComponentContext;
             box2d::utils::Box2DWorldSharedPtr&              mpBox2DWorld;
+            OUString                                        maFallbackDir;
         };
 
 }
